--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 aria-required="true"
               />
               <div class="form-icon">
-                <img src="/images/Page 1.svg" alt="User icon" />
+                <img src="images/head.png" alt="User icon" />
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@
                 aria-required="true"
               />
               <div class="form-icon">
-                <img src="images/password.svg" alt="Password icon" />
+                <img src="images/tail.png" alt="Password icon" />
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
 
         <div class="customer-mgt">
           <div class="group-img">
-            <img src="images/_Group_.svg" alt="" />
+            <img src="images/group.png" alt="" />
           </div>
           <div>
             <h3>Customer Management</h3>
