--- a/post-loss.html
+++ b/post-loss.html
@@ -92,9 +92,9 @@
         <div class="main-content">
           <div class="top-container">
             <div class="hamburger" id="hamburger">
-              <img src="/images/hamburger.svg" alt="icon" id="ham" />
+              <img src="images/hamburger.png" alt="icon" id="ham" />
               <img
-                src="/images/cancel.svg"
+                src="images/cancel.png"
                 alt="icon"
                 id="canc"
                 style="display: none"
