--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
         </div>
       </div>
     </div>
-
-    <script src="js/myButton.js"></script>
+    <script>
+      document.getElementById("myBtn").onclick = function () {
+        window.location.href = "dashboard.html";
+      };
+    </script>
+    <!-- 
+    <script src="js/myButton.js"></script> -->
   </body>
 </html>
