--- a/createnewinspection.html
+++ b/createnewinspection.html
@@ -24,7 +24,7 @@
     <div class="container">
 
       <!-- Aside section holding navbar of icon linked to other pages -->
-
+      <div id="sidebar-parent">
       <aside class="sidebar" id="sidebar">
         <nav>
           <ul>
@@ -34,7 +34,7 @@
               </a>
             </li>
             <li>
-              <a href="dashboard.html" class="active">
+              <a href="createnewinspection.html" class="active">
                 <img src="images/icon2.png" alt="" />
               </a>
             </li>
@@ -78,6 +78,7 @@
           </ul>
         </nav>
       </div>
+    </div>
 
       <!-- Main content -->
 
@@ -85,7 +86,7 @@
         <div class="top-container">
 
           <div class="hamburger" id="hamburger">
-            <img src="images/hamburger.png" alt="icon" id="ham" />
+            <img src="images/hamburger.svg" alt="icon" id="ham" />
             <img
               src="images/cancel.png"
               alt="icon"
