--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="active">
+                <a href="post-loss.html" class="active">
                   <img src="images/icon2.png" alt="" />
                 </a>
               </li>
@@ -94,7 +94,7 @@
         <div class="main-content">
           <div class="top-container">
             <div class="hamburger" id="hamburger">
-              <img src="images/hamburger.png" alt="icon" id="ham" />
+              <img src="images/hamburger.svg" alt="icon" id="ham" />
               <img
                 src="images/cancel.png"
                 alt="icon"
