--- a/details.html
+++ b/details.html
@@ -36,7 +36,7 @@
               </a>
             </li>
             <li>
-              <a href="dashboard.html" class="active">
+              <a href="pre-loss.html" class="active">
                 <img src="images/icon2.png" alt="" />
               </a>
             </li>
@@ -44,7 +44,7 @@
               <a href="report.html"><img src="images/icon3.png" alt="" /> </a>
             </li>
             <li>
-              <a href="details.html"><img src="images/icon4.png" alt="" /></a>
+              <a href="createnewinspection.html"><img src="images/icon4.png" alt="" /></a>
             </li>
             <li>
               <a href="createnewinspection.html"
@@ -90,7 +90,7 @@
         <div class="main-content">
           <div class="top-container">
             <div class="hamburger" id="hamburger">
-              <img src="images/hamburger.png" alt="icon" id="ham" />
+              <img src="images/hamburger.svg"icon" id="ham" />
               <img
                 src="images/cancel.png"
                 alt="icon"
@@ -197,7 +197,8 @@
           </div>
         </div>
       </div>
-      <script>var hamburger = document.getElementById("ham");
+      <script>
+      var hamburger = document.getElementById("ham");
         var cancel = document.getElementById("canc");
         var sidebar = document.getElementById("sidebar");
         var sidebarParent = document.getElementById("sidebar-parent");
@@ -252,6 +253,5 @@
           window.location.href = "createnewinspection.html";
         };
         </script>
-   <!-- <script src="js/details.js"></script> -->
   </body>
 </html>
