--- a/pre-loss.html
+++ b/pre-loss.html
@@ -92,7 +92,7 @@
         <div class="main-content">
           <div class="top-container">
             <div class="hamburger" id="hamburger">
-              <img src="images/hamburger.png" alt="icon" id="ham" />
+              <img src="images/hamburger.svg" alt="icon" id="ham" />
               <img
                 src="images/cancel.png"
                 alt="icon"
