--- a/dashboard.html
+++ b/dashboard.html
@@ -166,33 +166,33 @@
             <div class="activity-card">
               <div class="activity-header">
                 <h2>Activity</h2>
-                <a href="#">View all > </a>
+                <a href="report.html">View all > </a>
               </div>
               <ul class="activity-list">
                 <li class="activity-item">
                   <p>You have a property inspection coming up in three days</p>
-                  <a href="#">Set reminder</a>
+                  <a href="createnewinspection.html">Set reminder</a>
                 </li>
                 <li class="activity-item">
                   <p>
                     Mustapha Onasanya sent a new property inspection for
                     Rovenheight homes
                   </p>
-                  <a href="#">See inspection</a>
+                  <a href="inspectionlist.html">See inspection</a>
                 </li>
                 <li class="activity-item">
                   <p>
                     Your scheduled inspection for Gig Logistics is three days
                     overdue
                   </p>
-                  <a href="#">Re-schedule now</a>
+                  <a href="post-loss.html">Re-schedule now</a>
                 </li>
                 <li class="activity-item">
                   <p>
                     Mustapha Onasanya sent a new property inspection for
                     Rovenheight homes
                   </p>
-                  <a href="#">See inspection</a>
+                  <a href="pre-loss.html">See inspection</a>
                 </li>
               </ul>
             </div>
