--- a/dashboard.html
+++ b/dashboard.html
@@ -192,7 +192,7 @@
                     Mustapha Onasanya sent a new property inspection for
                     Rovenheight homes
                   </p>
-                  <a href="pre-loss.html">See inspection</a>
+                  <a href="index.html">See inspection</a>
                 </li>
               </ul>
             </div>
