--- a/details.html
+++ b/details.html
@@ -47,7 +47,7 @@
               <a href="createnewinspection.html"><img src="images/icon4.png" alt="" /></a>
             </li>
             <li>
-              <a href="createnewinspection.html"
+              <a href="index.html"
                 ><img src="images/icon5.png" alt=""
               /></a>
             </li>
