--- a/report.html
+++ b/report.html
@@ -32,7 +32,7 @@
                 /></a>
               </li>
               <li>
-                <a href="#" class="active">
+                <a href="createnewinspection.html" class="active">
                   <img src="images/icon2.png" alt="Icon2" />
                 </a>
               </li>
@@ -47,10 +47,14 @@
                 /></a>
               </li>
               <li>
-                <a href="#"><img src="images/icon5.png" alt="Icon5" /></a>
+                <a href="inspectionlist.html"
+                  ><img src="images/icon5.png" alt="Icon5"
+                /></a>
               </li>
               <li>
-                <a href="#"><img src="images/icon6.png" alt="Icon6" /></a>
+                <a href="index.html"
+                  ><img src="images/icon6.png" alt="Icon6"
+                /></a>
               </li>
             </ul>
           </nav>
