--- a/inspectionlist.html
+++ b/inspectionlist.html
@@ -33,7 +33,7 @@
               </a>
             </li>
             <li>
-              <a href="pre-loss.html" class="active">
+              <a href="inspectionlist.html" class="active">
                 <img src="images/icon2.png" alt="" />
               </a>
             </li>
@@ -49,7 +49,7 @@
               /></a>
             </li>
             <li>
-              <a href="inspectionlist.html"
+              <a href="index.html"
                 ><img src="images/icon6.png" alt=""
               /></a>
             </li>
