--- a/report.html
+++ b/report.html
@@ -129,7 +129,7 @@
           <div class="policy-card">
             <div class="policy-details">
               <div class="image-container">
-                <img src="images/tower.pngg" alt="Building" />
+                <img src="images/tower.png" alt="Building" />
                 <p class="property-type"><span class="dot"></span> Property</p>
               </div>
 
