--- a/details.html
+++ b/details.html
@@ -253,6 +253,18 @@
         document.getElementById("ass").onclick = function () {
           window.location.href = "createnewinspection.html";
         };
+
+        // transition
+
+      document
+        .getElementById("hamburger")
+        .addEventListener("click", function () {
+          var sidebar = document.getElementById("sidebarParent");
+          // var content = document.getElementById("logoContainer");
+          var content = document.getElementById("main");
+          sidebar.classList.toggle("show");
+          content.classList.toggle("shifted");
+        });
         </script>
   </body>
 </html>
