--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3, user-scalable=yes"
     />
-    gi
+
     <title>Dashboard</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
@@ -313,7 +313,7 @@
           hamburger.classList.toggle("open");
           if (!hamburger.classList.contains("open")) {
             cancel.style.display = "none";
-            cancel.style.marginLeft = "0";
+            cancel.style.marginLeft = "";
             hamburger.style.display = "block";
             logoContainer.style.display = "none";
             main.style.marginLeft = "0";
