--- a/dashboard.html
+++ b/dashboard.html
@@ -112,9 +112,12 @@
               <img src="images/Vector.png" class="notification" />
               <img src="images/group38.png" />
 
-              <select name="" class="user">
-                <option value="">Godwin</option>
-                <option value="">Adesola</option>
+              <select name="navigation" class="user" id="choose">
+                <option value="dashboard.html">Godwin</option>
+                 <option value="details.html">Details</option></a>
+                <option value="report.html">Report</option>
+                <option value="createnewinspection.html">Sign-up</option>
+                <option value="index.html">Log-out</option>
               </select>
             </div>
           </div>
@@ -348,6 +351,15 @@
           var content = document.getElementById("main");
           sidebar.classList.toggle("show");
           content.classList.toggle("shifted");
+        });
+
+        // Select navigation
+
+        document.getElementById('choose').addEventListener('change', function() {
+            var selectedValue = this.value;
+            if (selectedValue) {
+                window.location.href = selectedValue;
+            }
         });
     </script>
     <!-- <script src="/js/dashboard.js"></script> -->
