--- a/inspectionlist.html
+++ b/inspectionlist.html
@@ -107,9 +107,12 @@
             <div class="top-content">
               <img src="images/Vector.png" class="notification" />
               <img src="images/group38.png" />
-              <select name="" class="user">
-                <option value="">Godwin</option>
-                <option value="">Adesola</option>
+              <select name="navigation" class="user" id="choose">
+                <option value="dashboard.html">Godwin</option>
+                 <option value="details.html">Details</option></a>
+                <option value="report.html">Report</option>
+                <option value="createnewinspection.html">Sign-up</option>
+                <option value="index.html">Log-out</option>
               </select>
             </div>
           </div>
@@ -340,6 +343,13 @@
           var content = document.getElementById("main");
           sidebar.classList.toggle("show");
           content.classList.toggle("shifted");
+        });
+
+        document.getElementById('choose').addEventListener('change', function() {
+            var selectedValue = this.value;
+            if (selectedValue) {
+                window.location.href = selectedValue;
+            }
         });
     </script>
 
