--- a/report.html
+++ b/report.html
@@ -112,9 +112,12 @@
             />
 
             <img src="images/group38.png" alt="Group38" />
-            <select name="" class="user">
-              <option value="">Godwin</option>
-              <option value="">Adesola</option>
+            <select name="navigation" class="user" id="choose">
+              <option value="dashboard.html">Godwin</option>
+               <option value="details.html">Details</option></a>
+              <option value="report.html">Report</option>
+              <option value="createnewinspection.html">Sign-up</option>
+              <option value="index.html">Log-out</option>
             </select>
           </div>
         </div>
@@ -341,6 +344,14 @@
           sidebar.classList.toggle("show");
           content.classList.toggle("shifted");
         });
+
+      // Navigation
+      document.getElementById("choose").addEventListener("change", function () {
+        var selectedValue = this.value;
+        if (selectedValue) {
+          window.location.href = selectedValue;
+        }
+      });
     </script>
   </body>
 </html>
