--- a/createnewinspection.html
+++ b/createnewinspection.html
@@ -100,7 +100,7 @@
             <img src="images/group38.png" />
             <select name="navigation" class="user" id="choose">
               <option value="dashboard.html">Godwin</option>
-               <option value="details.html">Details</option></a>
+               <option value="details.html">Details</option>
               <option value="report.html">Report</option>
               <option value="createnewinspection.html">Sign-up</option>
               <option value="index.html">Log-out</option>
