--- a/createnewinspection.html
+++ b/createnewinspection.html
@@ -228,7 +228,7 @@
             cancel.style.marginLeft = "0";
             hamburger.style.display = "block";
             logoContainer.style.display = "none";
-            main.style.marginLeft = "0";
+            main.style.marginRight= "388px";
           }
         });
       });
