--- a/createnewinspection.html
+++ b/createnewinspection.html
@@ -153,7 +153,7 @@
             <option value="engineering">Engineering</option>
           </select>
         </div>
-        <button class="create-request" disabled>Create Request</button></div>
+        <button id= "jaju" class="create-request" disabled>Create Request</button></div>
         
       </div>
     </div>
@@ -228,7 +228,7 @@
             cancel.style.marginLeft = "0";
             hamburger.style.display = "block";
             logoContainer.style.display = "none";
-            main.style.marginRight= "388px";
+            main.style.marginLeft= "-270";
           }
         });
       });
