--- a/pre-loss.html
+++ b/pre-loss.html
@@ -283,7 +283,7 @@
             <div class="success-modal-content">
               <img src="images/handy.png" alt="icon" class="hand-image" />
               <button class="cancel-success">
-                <img src="images/clarity_close-line.png" alt="icon" />
+                <img src="images/cancel.png" alt="icon" />
               </button>
               <p>
                 You've successfully created new Inspection ID-23321 for PRIME
