--- a/dashboard.html
+++ b/dashboard.html
@@ -99,7 +99,7 @@
         <div class="main-content">
           <div class="top-container">
             <div class="hamburger" id="hamburger">
-              <img src="images/hamburger.svg" alt="icon" id="ham" />
+              <img src="images/hamburger1.svg" alt="icon" id="ham" />
               <img
                 src="images/cancel.png"
                 alt="icon"
